...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:id="@+id/admin_dashboard_main"
    tools:context=".uipages.AdminDashboardActivity"
    tools:theme="@style/Base.Theme.PopIn"
    >


    <ImageView
...
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/AdminDashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdminDashboardTitle"
        android:textColor="?attr/colorSecondary"
        android:textSize="42sp"
        android:textStyle="bold"
...
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="16dp" />


        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/addEvent"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            app:backgroundTint="#FF8559" />

        <Button
            android:id="@+id/btnUpdateEvent"
...
            android:textColor="@color/black"
            app:backgroundTint="@color/warning" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/sectionAddEvent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AdminDashboardTitle"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Enter the Title" />

            <EditText
                android:id="@+id/addDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="YYYY-MM-DD-HH-mm"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Enter the Location" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="Enter the Description" />

            <Button
...
