<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIpages.MainActivity"
    tools:theme="@style/Base.Theme.PopIn"
    android:clipChildren="false"

    >

    <ImageView
        android:id="@+id/wave_image"
        android:layout_width="411dp"
        android:layout_height="752dp"
        android:contentDescription="@string/waveDesignDescription"
        android:scaleType="centerCrop"
        android:scaleY="-1"
        android:src="@drawable/wave"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/partyPopImage"
        android:layout_width="216dp"
        android:layout_height="184dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/designImageDescription"
        android:scaleType="fitXY"

        android:src="@drawable/partypop"
        android:translationX="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/balloonsImage"
        android:layout_width="155dp"
        android:layout_height="132dp"

        android:layout_marginTop="60dp"
        android:contentDescription="@string/designImageDescription"
        android:rotation="30"

        android:scaleType="fitXY"

        android:src="@drawable/balloons"
        android:translationX="-40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="323dp"
        android:layout_height="184dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/wave_image"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />


    <TextView
        android:id="@+id/loginPhrase"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginCatchyPhrase"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Logo"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/Logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReturningUser"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginStart="40dp"
        android:layout_marginTop="632dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rounded_button"

        android:text="@string/ReturningUser"

        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="16sp"

        app:backgroundTint="#FF8559"
        app:cornerRadius="50dp"
        app:strokeColor="#000000"
        app:strokeWidth="2dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNewUser"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/NewUser"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:background="@drawable/rounded_button_outline"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnReturningUser"  />

    <TextView
        android:id="@+id/guestContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joinText"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNewUser"

        app:layout_constraintHorizontal_bias="0.962"
        app:layout_constraintStart_toStartOf="@+id/btnNewUser"

        app:layout_constraintTop_toBottomOf="@+id/btnNewUser"
        app:layout_constraintVertical_bias="0.117" />


</androidx.constraintlayout.widget.ConstraintLayout>
